19 February 2009: Wouter
	- unbound-checkconf and unbound print warnings when trust anchors
	  have unsupported algorithms.
	- added contrib/update-itar.sh  This script is similar to
	  update-anchor.sh, and updates from the IANA ITAR repository.
	  You can provide your own PGP key and trust repo, or can use the
	  builtin.  The program uses wget and gpg to work.
	- iana portlist updated.
	- update-itar.sh: using ftp:// urls because https godaddy certificate
	  is not available everywhere and then gives fatal errors.  The 
	  security is provided by pgp signature.

18 February 2009: Wouter
	- more cycle detection. Also for target queries.
	- fixup bug where during deletion of the mesh queries the callbacks
	  that were reentrant caused assertion failures. Keep the mesh in 
	  a reentrant safe state.  Affects libunbound, reload of server,
	  on quit and flush_requestlist.
	- iana portlist updated.

13 February 2009: Wouter
	- forwarder information now per-thread duplicated.
	  This keeps it read only for speed, with no locking necessary.
	- forward command for unbound control to change forwarders to use
	  on the fly.
	- document that unbound-host reads no config file by default.
	- updated iana portlist.

12 February 2009: Wouter
	- call setusercontext if available (on BSD).
	- small refactor of stats clearing.
	- #227: flush_stats feature for unbound-control.
	- stats_noreset feature for unbound-control.
	- flush_requestlist feature for unbound-control.
	- libunbound version upped API (was changed 5 feb).
	- unbound-control status shows if root forwarding is in use.
	- slightly nicer memory management in iter-fwd code.

10 February 2009: Wouter
	- keys with rfc5011 REVOKE flag are skipped and not considered when
	  validating data.
	- iana portlist updated
	- #226: dump_requestlist feature for unbound-control.

6 February 2009: Wouter
	- contrib contains specfile for fedora 1.2.1 (from Paul Wouters).
	- iana portlist updated.